add binary format for faster reading