@@ -1,13 +1,13 @@
 package org.karina.lang.compiler.jvm_loading.binary.in;
 
 import org.jetbrains.annotations.NotNull;
+import org.karina.lang.compiler.KarinaCompiler;
 import org.karina.lang.compiler.logging.Log;
 import org.karina.lang.compiler.logging.errors.FileLoadError;
 import org.karina.lang.compiler.model_api.impl.ModelBuilder;
 import org.karina.lang.compiler.model_api.Model;
 
 import java.io.ByteArrayInputStream;
-import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.ArrayList;
@@ -15,6 +15,7 @@ import java.util.List;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
+import java.util.function.Consumer;
 
 public class ModelReader {
     private final InputStream stream;
@@ -24,44 +25,84 @@ public class ModelReader {
 
     }
 
-    public Model read(File file) throws IOException {
+    public Model read() throws IOException {
         var builder = new ModelBuilder();
+        var ttyl = new TTYL();
 
         var outerReader = new ClassReader(this.stream);
+        var magicNumber = outerReader.readInt();
+        if (magicNumber != KarinaCompiler.BINARY_MAGIC_NUMBER) {
+            throw new IOException(
+                    "Invalid Karina binary file format, expected magic number " +
+                    KarinaCompiler.BINARY_MAGIC_NUMBER +
+                    " but got " +
+                    magicNumber
+            );
+        }
+
+        var formatVersion = outerReader.readInt();
+        if (formatVersion != KarinaCompiler.BINARY_VERSION) {
+            throw new IOException(
+                    "Invalid Karina binary file version, expected " +
+                    KarinaCompiler.BINARY_VERSION +
+                    " but got " +
+                    formatVersion
+            );
+        }
+
         var offsets = outerReader.readIntList();
+
+
 
         var remainingBytes = this.stream.readAllBytes();
 
         //Fork and Join
         List<Future<?>> futures = new ArrayList<>();
         var availableProcessors = Runtime.getRuntime().availableProcessors();
-        try (var executor = Executors.newFixedThreadPool(availableProcessors)) {
+
+        Log.record("cache with " + offsets.length + " offsets and " + availableProcessors + " threads");
+
+        try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
+            Log.begin("setup");
+            var tasks = new ArrayList<Runnable>();
             for (var index = 0; index < offsets.length; index++) {
                 int finalIndex = index;
-                var task = executor.submit(() -> {
+                Runnable runnable = () -> {
                     try {
                         var innerReader = getClassReader(finalIndex, offsets, remainingBytes);
-                        var bytecodeClass = innerReader.read();
-                        //builder.addClassWithChildren(bytecodeClass);
+                        var _ = innerReader.read(ttyl, builder);
                     } catch (IOException e) {
-                        Log.fileError(new FileLoadError.IO(file, e));
+                        Log.fileError(new FileLoadError.Resource(e));
                         throw new Log.KarinaException();
                     }
-                });
-                futures.add(task);
+                };
+                tasks.add(runnable);
             }
+            Log.end("setup");
 
+            Log.begin("submit");
+            for (var task : tasks) {
+                futures.add(executor.submit(task));
+            }
+            Log.end("submit");
+
+            Log.begin("link");
             for (var future : futures) {
                 future.get();
             }
+            Log.end("link");
 
         } catch (ExecutionException | InterruptedException e) {
-            Log.fileError(new FileLoadError.IO(file, e));
+            e.printStackTrace();
+            Log.fileError(new FileLoadError.Resource(e));
             throw new Log.KarinaException();
         }
 
-
-        return builder.build();
+        var finished = builder.build();
+        Log.begin("resolve");
+        ttyl.resolve(finished);
+        Log.end("resolve");
+        return finished;
     }
 
     private static @NotNull ClassReader getClassReader(int index, int[] offsets, byte[] remainingBytes) {
@@ -76,16 +117,23 @@ public class ModelReader {
         return new ClassReader(innerBuffer);
     }
 
-    public long readHash() throws IOException {
-        return (
-                (long) this.stream.read() << 56) |
-                ((long) this.stream.read() << 48) |
-                ((long) this.stream.read() << 40) |
-                ((long) this.stream.read() << 32) |
-                ((long) this.stream.read() << 24) |
-                ((long) this.stream.read() << 16) |
-                ((long) this.stream.read() << 8) |
-                (long) this.stream.read();
+
+    public static class TTYL {
+        List<Consumer<Model>> tasks = new ArrayList<>();
+
+        public void add(Consumer<Model> task) {
+            synchronized (this) {
+                this.tasks.add(task);
+            }
+        }
+
+        private void resolve(Model model) {
+            for (var task : this.tasks) {
+                task.accept(model);
+            }
+            this.tasks.clear();
+        }
     }
+
 
 }
